<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/searchView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/border"
                app:iconifiedByDefault="false"
                app:queryHint="Search Province/Municipality"
                app:floatingSearch_close_search_on_keyboard_dismiss="true" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center"
                android:id="@+id/rv"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/buttonlvl5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="#A50B00"
                    android:fontFamily="@font/nexablack"
                    android:text="@string/level5" />

                <TextView
                    android:id="@+id/textLvl5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/border"
                    android:fontFamily="@font/nexalight"
                    android:justificationMode="inter_word"
                    android:padding="10dp"
                    android:text="@string/lvl5" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/buttonlvl4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="#FF1100"
                    android:fontFamily="@font/nexablack"
                    android:text="@string/level4" />

                <TextView
                    android:id="@+id/textLvl4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/border"
                    android:fontFamily="@font/nexalight"
                    android:justificationMode="inter_word"
                    android:padding="10dp"
                    android:text="@string/lvl4" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/buttonlvl3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="#FF9800"
                    android:fontFamily="@font/nexablack"
                    android:text="@string/level3" />

                <TextView
                    android:id="@+id/textLvl3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/border"
                    android:fontFamily="@font/nexalight"
                    android:justificationMode="inter_word"
                    android:padding="10dp"
                    android:text="@string/lvl3" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/buttonlvl2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="#FDE300"
                    android:fontFamily="@font/nexablack"
                    android:text="@string/level2" />

                <TextView
                    android:id="@+id/textLvl2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/border"
                    android:fontFamily="@font/nexalight"
                    android:justificationMode="inter_word"
                    android:padding="10dp"
                    android:text="@string/lvl2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/buttonlvl1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="40dp"
                    android:backgroundTint="#4CAF50"
                    android:fontFamily="@font/nexablack"
                    android:text="@string/level1" />

                <TextView
                    android:id="@+id/textLvl1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="40dp"
                    android:background="@drawable/border"
                    android:fontFamily="@font/nexalight"
                    android:justificationMode="inter_word"
                    android:padding="10dp"
                    android:text="@string/lvl1" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>

